--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     margin-bottom: 0;
     background-color: white;
     width: 600px;
-    height: 580px;
+    height: 620px;
     align-items: center;
     margin-left: 600px;
     border-radius: 20px;
@@ -21,6 +21,7 @@ body{
 
 #popcat{
     width: 300px;
+    margin-bottom: 0;
     transition: tranform 0.1s ease;
 }
 
